ci(pre-commit): fix variable

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Get modified files
       id: file_modifications
       run: |
-        DIFF="$(git diff --name-only origin/${{ github.base_ref }} ${{ github.sha }})"
+        DIFF=$(git diff --name-only origin/${{ github.base_ref }} ${{ github.sha }})
         export DIFF
         echo "Diff between ${{ github.base_ref }} and ${{ github.sha }}"
         echo "files=$( echo "$DIFF" | xargs echo )" >> $GITHUB_OUTPUT
