--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,10 +1,10 @@
 name: Documentation
+
 on:
-  workflow_run:
-    workflows:
-    - Pre-commit
-    types:
-    - completed
+  pull_request:
+    paths:
+    - "modules/**"
+  workflow_call:
 
 jobs:
   docs:
@@ -17,41 +17,10 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.ref }}
 
-    - name: Filter paths
-      uses: dorny/paths-filter@v3
-      id: filter
-      with:
-        filters: |
-          modules:
-            - 'modules/**'
-          dev:
-            - 'environments/dev/**'
-          prod:
-            - 'environments/prod/**'
-
-    - name: Generate Terraform docs for module and push changes back to PR
-      if: steps.filter.outputs.modules == 'true'
+    - name: Generate docs and push changes back to PR
       uses: terraform-docs/gh-actions@v1.3.0
       with:
         recursive: true
         recursive-include-main: false # it will not generate documentation at the root
-        git-commit-message: "docs(modules): generate terraform documentation"
-        git-push: true
-
-    - name: Generate Terraform docs for dev and push changes back to PR
-      if: steps.filter.outputs.dev == 'true'
-      uses: terraform-docs/gh-actions@v1.3.0
-      with:
-        recursive: true
-        recursive-include-main: false # it will not generate documentation at the root
-        git-commit-message: "docs(dev): generate terraform documentation"
-        git-push: true
-
-    - name: Generate Terraform docs for prod and push changes back to PR
-      if: steps.filter.outputs.prod == 'true'
-      uses: terraform-docs/gh-actions@v1.3.0
-      with:
-        recursive: true
-        recursive-include-main: false # it will not generate documentation at the root
-        git-commit-message: "docs(prod): generate terraform documentation"
+        git-commit-message: "docs(terraform): generate documentation"
         git-push: true
