--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,19 +1,21 @@
 name: Deploy Cloud Resume Challenge on prod
 
 on:
-  workflow_run:
-    workflows:
-    - Documentation
-    types:
-    - completed
+  push:
+    branches:
+    - main
+    paths:
+    - "environmets/prod/**"
 
 jobs:
-  deploy-prod:
+  deploy:
     name: Deploy prod environment
-    # only run if documentation succeeded
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     uses: ./.github/workflows/deploy.yml
     with:
       environment: prod
       working_dir: ./environments/prod
     secrets: inherit
+
+  docs:
+    name: Generate Terraform documentation
+    uses: ./.github/workflows/documentation.yml
