--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -23,10 +23,8 @@ jobs:
     - name: Get modified files
       id: file_modifications
       run: |
-        DIFF="$(git diff --name-only origin/${{ github.base_ref }} ${{ github.sha }})"
-        export DIFF
         echo "Diff between ${{ github.base_ref }} and ${{ github.sha }}"
-        echo "files=$( echo "$DIFF" | xargs echo )" >> $GITHUB_OUTPUT
+        echo "files=$( echo "$(git diff --name-only origin/${{ github.base_ref }} ${{ github.sha }})" | xargs echo )" >> $GITHUB_OUTPUT
 
     # Needed for pre-commit to fix pushes to PR
     - uses: actions/checkout@v4
