--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -24,7 +24,7 @@ jobs:
       id: file_modifications
       run: |
         echo "Diff between ${{ github.base_ref }} and ${{ github.sha }}"
-        echo "files=$(git diff --name-only origin/${{ github.base_ref }} ${{ github.sha }})" >> $GITHUB_OUTPUT
+        echo files=$(git diff --name-only origin/${{ github.base_ref }} ${{ github.sha }}) >> $GITHUB_OUTPUT
 
     # Needed for pre-commit to fix pushes to PR
     - uses: actions/checkout@v4
