--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -23,8 +23,9 @@ jobs:
     - name: Get modified files
       id: file_modifications
       run: |
+        export DIFF=$(git diff --name-only origin/${{ github.base_ref }} ${{ github.sha }})
         echo "Diff between ${{ github.base_ref }} and ${{ github.sha }}"
-        echo files=$(git diff --name-only origin/${{ github.base_ref }} ${{ github.sha }}) >> $GITHUB_OUTPUT
+        echo "files=$( echo "$DIFF" | xargs echo )" >> "$GITHUB_OUTPUT"
 
     # Needed for pre-commit to fix pushes to PR
     - uses: actions/checkout@v4
