ci(workflows): update workflows (#7)

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -83,3 +83,7 @@ jobs:
         hide-progress: true
         exit-code: '1'
         severity: 'CRITICAL,HIGH'
+
+  docs:
+    name: Generate Terraform documentation
+    uses: ./.github/workflows/documentation.yml
