ci(workflows): update workflow

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -85,5 +85,6 @@ jobs:
         severity: 'CRITICAL,HIGH'
 
   docs:
+    needs: pre-commit
     name: Generate Terraform documentation
     uses: ./.github/workflows/documentation.yml
