ci(workflows): update workflow

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -47,5 +47,7 @@ jobs:
 
   docs:
     needs: pre-commit
+    permissions:
+      pull-requests: write
     name: Generate Terraform documentation
     uses: ./.github/workflows/documentation.yml
