--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -38,6 +38,10 @@ jobs:
       with:
         python-version: '3.13'
 
+    - uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.11.0
+
     - name: Execute pre-commit
       uses: pre-commit/action@v3.0.1
       with:
