--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -36,11 +36,17 @@ jobs:
 
     - uses: actions/setup-python@v5.4.0
       with:
-        python-version: '3.13'
+        python-version: 3.13
 
-    - uses: hashicorp/setup-terraform@v3
+    - uses: hashicorp/setup-terraform@v3.1.2
       with:
         terraform_version: 1.11.0
+
+    - uses: terraform-linters/setup-tflint@v4.1.1
+
+    - uses: aquasecurity/setup-trivy@v0.2.3
+      with:
+        version: 0.61.0
 
     - name: Execute pre-commit
       uses: pre-commit/action@v3.0.1
