--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -46,7 +46,7 @@ jobs:
 
     - uses: aquasecurity/setup-trivy@v0.2.3
       with:
-        version: 0.61.0
+        version: v0.61.0
 
     - name: Execute pre-commit
       uses: pre-commit/action@v3.0.1
