ci(workflows): update permissions

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,6 +8,7 @@ jobs:
     name: Generate Terraform documentation
     runs-on: ubuntu-latest
     permissions:
+      contents: write
       pull-requests: write
     steps:
     - uses: actions/checkout@v4
