--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -58,6 +58,7 @@ jobs:
   docs:
     needs: pre-commit
     permissions:
+      contents: write
       pull-requests: write
     name: Generate Terraform documentation
     uses: ./.github/workflows/documentation.yml
