fix(s3): make variables nullable (#8)
* fix(s3): make variables nullable

* ci(workflows): update workflows

* ci(workflows): update workflow

* ci(workflows): update workflow

* ci(workflows): update pre-commit workflow

* Revert "fix(s3): make variables nullable"

This reverts commit 4e86dfdef63b4a13136f3015f9d8c53028c82595.

* fix(s3): make variables nullable

* ci(workflows): update workflow

* ci(workflows): update pre-commit workflow

* ci(workflows): update pre-commit workflow

* ci(workflows): update trivy version in pre-commit workflow

* ci(workflows): update permissions

* docs(modules): generate terraform documentation

* ci(workflows): update workflow

* ci(workflows): update workflow

* ci(workflows): update workflow

* fix(s3): make variables nullable

* docs(modules): generate terraform documentation

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -7,15 +7,46 @@ jobs:
   docs:
     name: Generate Terraform documentation
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
     - uses: actions/checkout@v4
       with:
         ref: ${{ github.event.pull_request.head.ref }}
 
-    - name: Generate docs and push changes back to PR
+    - name: Filter paths
+      uses: dorny/paths-filter@v3
+      id: filter
+      with:
+        filters: |
+          modules:
+            - 'modules/**'
+          dev:
+            - 'environments/dev/**'
+          prod:
+            - 'environments/prod/**'
+
+    - name: Generate Terraform docs for module and push changes back to PR
+      if: steps.filter.outputs.modules == 'true'
       uses: terraform-docs/gh-actions@v1.3.0
       with:
-        recursive: true
-        recursive-include-main: false # it will not generate documentation at the root
-        git-commit-message: "docs(terraform): generate documentation"
+        git-commit-message: "docs(modules): generate terraform documentation"
         git-push: true
+        find-dir: "modules"
+
+    - name: Generate Terraform docs for dev and push changes back to PR
+      if: steps.filter.outputs.dev == 'true'
+      uses: terraform-docs/gh-actions@v1.3.0
+      with:
+        git-commit-message: "docs(dev): generate terraform documentation"
+        git-push: true
+        working-dir: "environments/dev"
+
+    - name: Generate Terraform docs for prod and push changes back to PR
+      if: steps.filter.outputs.prod == 'true'
+      uses: terraform-docs/gh-actions@v1.3.0
+      with:
+        git-commit-message: "docs(prod): generate terraform documentation"
+        git-push: true
+        working-dir: "environments/prod"
