--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -36,54 +36,29 @@ jobs:
 
     - uses: actions/setup-python@v5.4.0
       with:
-        python-version: '3.13'
+        python-version: 3.13
+
+    - uses: hashicorp/setup-terraform@v3.1.2
+      with:
+        terraform_version: 1.11.0
+
+    - uses: terraform-linters/setup-tflint@v4.1.1
+
+    - uses: aquasecurity/setup-trivy@v0.2.3
+      with:
+        version: v0.61.0
 
     - name: Execute pre-commit
       uses: pre-commit/action@v3.0.1
-      env:
-        SKIP: >-
-          terraform_fmt,
-          terraform_validate,
-          terraform_tflint,
-          terraform_trivy
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         extra_args: |
           --files ${{ steps.file_modifications.outputs.files }}
 
-    # Run skipped hooks
-
-    - uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: 1.11.0
-
-    - run: |
-        terraform init
-    - run: |
-        terraform fmt
-    - run: |
-        terraform validate
-
-    - uses: terraform-linters/setup-tflint@v4
-
-    - run: |
-        tflint --init
-      env:
-        # https://github.com/terraform-linters/tflint/blob/master/docs/user-guide/plugins.md#avoiding-rate-limiting
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - run: |
-        tflint
-
-    - name: Run Trivy vulnerability scanner in IaC mode
-      uses: aquasecurity/trivy-action@0.30.0
-      with:
-        scan-type: 'config'
-        scanners: 'vuln,secret,misconfig'
-        hide-progress: true
-        exit-code: '1'
-        severity: 'CRITICAL,HIGH'
-
   docs:
+    needs: pre-commit
+    permissions:
+      contents: write
+      pull-requests: write
     name: Generate Terraform documentation
     uses: ./.github/workflows/documentation.yml
